--- a/src/index.scss
+++ b/src/index.scss
@@ -1,26 +1,20 @@
 @font-face {
-  font-family: 'Material Icons';
+  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
-  src: url(https://fonts.gstatic.com/s/materialicons/v31/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/ek4gzZ-GeXAPcSbHtCeQI_esZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0460-052F, U+20B4, U+2DE0-2DFF, U+A640-A69F;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
 
 .x-task-main-box {
-	.x-task-icon {
-	  font-family: 'Material Icons';
-	  font-weight: normal;
-	  font-style: normal;
-	  font-size: 24px;
-	  line-height: 1;
-	  letter-spacing: normal;
-	  text-transform: none;
-	  display: inline-block;
-	  white-space: nowrap;
-	  word-wrap: normal;
-	  direction: ltr;
-	  -webkit-font-feature-settings: 'liga';
-	  -webkit-font-smoothing: antialiased;
-	}
+	font-family: Roboto;
 
 	button {
 		line-height: 26px;
