--- a/src/ui/Dialog/index.scss
+++ b/src/ui/Dialog/index.scss
@@ -64,13 +64,14 @@
 		padding: 12px 20px;
 		border-top: 1px solid #d4d4d4;
 		background-color: #e9e9e9;
-	}
-	.x-task-dialog-buttons * {
-		margin-right: 8px;
-	}
-	.x-task-dialog-buttons .at-right {
-		float: right;
-		margin-right: 0;
-		margin-left: 8px;
+		
+		* {
+			margin-right: 8px;
+		}
+		&.at-right {
+			float: right;
+			margin-right: 0;
+			margin-left: 8px;
+		}
 	}
 }
