--- a/src/ui/Button/index.scss
+++ b/src/ui/Button/index.scss
@@ -1,3 +1,16 @@
 .x-task-button {
+	line-height: 40px;
+	border-radius: 3px;
+	padding: 0 25px;
+	text-align: center;
+	display: inline-block;
+	vertical-align: top;
+	color: #fff;
+	background-color: #555;
+	font-size: 14px;
+	cursor: pointer;
 
+	&:hover {
+		background-color: #333;
+	}
 }
