--- a/src/ui/FormField/index.scss
+++ b/src/ui/FormField/index.scss
@@ -4,7 +4,8 @@
 		color: #555;
 		font-size: 14px;
 	}
-	input,
+	input[type="text"],
+	input[type="password"],
 	select,
 	textarea {
 		box-sizing: border-box;
