--- a/src/ui/Icon/index.scss
+++ b/src/ui/Icon/index.scss
@@ -5,7 +5,6 @@
   src: url(https://fonts.gstatic.com/s/materialicons/v31/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
 }
 .x-task-icon {
-	cursor: pointer;
 	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
@@ -20,13 +19,19 @@
 	-webkit-font-feature-settings: 'liga';
 	-webkit-font-smoothing: antialiased;
 
+	&.x-task-button-icon {
+		cursor: pointer;
+		opacity: 0.7;
+		&:hover {
+			opacity: 1;
+		}
+	}
+
 	&.x-task-edit-icon {
 		float: left;
 		margin-top: -1px;
-	    color: #555;
-	    
-	    &:hover {
-			color: #000;
-		}
+	}
+	&.x-task-activate-icon {
+		float: right;
 	}
 }
