--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,20 @@
   src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/mErvLBYg_cXG3rLvUsKT_fesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
   unicode-range: U+0400-045F, U+0490-0491, U+04B0-04B1, U+2116;
 }
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/Fcx7Wwv8OzT71A3E1XOAjvesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
+}
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Roboto'), local('Roboto-Regular'), url(https://fonts.gstatic.com/s/roboto/v18/CWB0XYA8bzo0kSThX0UTuA.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
 
 .x-task-main-box {
 	font-family: Roboto;
@@ -29,7 +43,7 @@
 	textarea {
 		box-sizing: border-box;
 		background-color: #fff;
-		padding: 10px 12px;
+		padding: 8px 12px;
 		border: 1px solid #aaa;
 		border-radius: 2px;
 		font-family: Segoe UI;
@@ -43,7 +57,7 @@
 	}
 
 	select {
-		padding: 9px 12px;
+		padding: 7px 12px;
 	}
 
 	input::placeholder {
@@ -54,9 +68,14 @@
 	input:focus::placeholder {
 		color: #d1d1d1;
 	}
-
+	.mt10 {
+		margin-top: 10px;
+	}
 	.mt15 {
 		margin-top: 15px;
+	}
+	.mt20 {
+		margin-top: 20px;
 	}
 	.pt10 {
 		padding-top: 10px;
@@ -66,4 +85,10 @@
 
 .x-task-gray {
 	color: #a1a1a1;
+}
+.x-task-fl {
+	float: left;
+}
+.x-task-fr {
+	float: right;
 }
