--- a/src/ui/Dialog/index.scss
+++ b/src/ui/Dialog/index.scss
@@ -79,17 +79,35 @@
 		font-size: 18px;
 		line-height: 30px;
 		padding: 10px 20px;
+
+		.x-task-dialog-title-logo {
+			color: #999;
+			text-shadow: 0 0 3px #222;
+			font-weight: bold;
+			font-style: italic;
+			font-size: 20px;
+			display: inline-block;
+			margin-right: 15px;
+			
+			.x-task-icon {
+				float: left;
+				margin-top: 5px;
+    			margin-right: 1px;
+    			color: #aaa;
+			}
+		}
 	}
 	.x-task-dialog-content {
 		position: relative;
 		font-size: 14px;
 		padding: 15px 20px;
 	}
-	.x-task-dialog-close {
+	.x-task-icon.x-task-dialog-close {
 		position: absolute;
 		right: 12px;
 		top: 12px;
 		cursor: pointer;
+		font-size: 24px;
 	}
 	.x-task-dialog-buttons {
 		position: relative;
