--- a/src/ui/Tabs/index.scss
+++ b/src/ui/Tabs/index.scss
@@ -17,6 +17,7 @@
 		margin-right: 1px;
 		background-color: #ddd;
 		cursor: pointer;
+		user-select: none;
 
 		&:first-child {
 			border-radius: 5px 0 0 5px;
