--- a/src/ui/Table/index.scss
+++ b/src/ui/Table/index.scss
@@ -1,19 +1,23 @@
 .x-task-table {
-	width: 100%;
-	border-spacing: 0;
-	border-collapse: collapse;
+	width: 100% !important;
+	border-spacing: 0 !important;
+	border-collapse: collapse !important;
 
 	th {
-		text-align: left;
-		padding: 6px 10px;
-		background-color: #e9e9e9;
-		font-weight: normal;
+		text-align: left !important;
+		padding: 6px 10px !important;
+		background-color: #e9e9e9 !important;
+		font-weight: normal !important;
 		border: 1px solid #d4d4d4;
+		font-size: 14px !important;
+		box-sizing: content-box !important;
 	}
 	
 	td {
-		vertical-align: top;
-		padding: 14px 10px;
-		border: 1px solid #e4e4e4;
+		vertical-align: top !important;
+		padding: 14px 10px !important;
+		border: 1px solid #e4e4e4 !important;
+		font-size: 14px !important;
+		box-sizing: content-box !important;
 	}
 }
