--- a/src/ui/Tabs/index.scss
+++ b/src/ui/Tabs/index.scss
@@ -18,6 +18,7 @@
 		background-color: #ddd;
 		cursor: pointer;
 		user-select: none;
+		box-sizing: content-box;
 
 		&:first-child {
 			border-radius: 5px 0 0 5px;
