--- a/src/ui/Table/index.scss
+++ b/src/ui/Table/index.scss
@@ -2,6 +2,7 @@
 	width: 100% !important;
 	border-spacing: 0 !important;
 	border-collapse: collapse !important;
+	table-layout: fixed !important;
 
 	th {
 		text-align: left !important;
