--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,11 @@
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
 }
 
+html,
+body {
+	height: 100%;
+}
+
 .x-task-main-box {
 	font-family: Roboto;
 	color: #111;
