--- a/src/components/QuickTask/index.scss
+++ b/src/components/QuickTask/index.scss
@@ -65,17 +65,19 @@
 		position: absolute;
     	top: -4px;
     	left: -1px;
-    	right: -1px;
+    	width: 400px;
     	padding: 5px 7px;
     	border-radius: 5px 5px 0 0;
     	background-color: #555;
-		
-		.x-task-icon {
-			display: inline-block;
-			margin-bottom: 0;
-			margin-right: 3px;
-			vertical-align: top;
-		}
+	}
+
+	.x-task-top-panel {
+		position: absolute;
+		top: -4px;
+		right: -1px;
+		width: 250px;
+		padding: 5px 7px;
+		text-align: right;
 	}
 
 	&.collapsed {
@@ -137,6 +139,13 @@
 			display: none;
 			float: right;
 			font-size: 30px;
+		}
+
+		&.x-task-inline-icon {
+			display: inline-block;
+			margin-bottom: 0;
+			margin-right: 3px;
+			vertical-align: top;
 		}
 
 		&.x-task-white-icon {
