--- a/src/components/AreaSelection/index.scss
+++ b/src/components/AreaSelection/index.scss
@@ -11,10 +11,16 @@
 	    position: absolute;
 	    width: 100%;
 	    height: 100%;
-	    background-color: #cfd8e4;
+	    box-shadow: inset 0 0 40px #29476f;
 	    border: 2px dashed #002d65;
 	    opacity: 0.4;
 	    border-radius: 3px;
 	    z-index: 1;
 	}
+	.x-task-mark {
+		left: -45px !important;
+		top: -45px !important;
+		margin-left: 0 !important;
+		margin-top: 0 !important;
+	} 
 }
