--- a/src/components/MainMenu/index.scss
+++ b/src/components/MainMenu/index.scss
@@ -1,4 +1,4 @@
-.x-task-main-menu {
+..main-menu {
 	position: absolute;
 	right: 65px;
 	top: 0;
@@ -13,7 +13,7 @@
 		line-height: 50px;
 		color: #ddd;
 
-		&.active {
+		&..active {
 			color: #ffd638 !important;
 			& > div {			
 				color: inherit;
