--- a/src/components/ElementResizer/index.scss
+++ b/src/components/ElementResizer/index.scss
@@ -1,4 +1,4 @@
-.x-task-element-resizer {
+..element-resizer {
 	position: absolute;
 	width: 15px;
 	height: 15px;
@@ -8,29 +8,29 @@
 	cursor: ns-resize;
 	opacity: 0;
 
-	&.x-task-dragged {
+	&..dragged {
 		cursor: -moz-grabbing !important;
     	cursor: -webkit-grabbing !important;
     	cursor: grabbing !important;
 	}
 
-	&.x-task-resizer-t {
+	&..resizer-t {
 		left: 50%;
 		margin-left: -7px;
 		top: -7px;
 	}
-	&.x-task-resizer-b {
+	&..resizer-b {
 		left: 50%;
 		margin-left: -7px;	
 		bottom: -10px;
 	}
-	&.x-task-resizer-l {
+	&..resizer-l {
 		top: 50%;
 		margin-top: -7px;	
 		left: -7px;
 		cursor: ew-resize;
 	}
-	&.x-task-resizer-r {
+	&..resizer-r {
 		top: 50%;
 		margin-top: -7px;
 		right: -10px;
