--- a/src/ui/Icon/index.scss
+++ b/src/ui/Icon/index.scss
@@ -4,7 +4,7 @@
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/materialicons/v31/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
 }
-.x-task-icon {
+..icon {
 	font-family: 'Material Icons';
 	font-weight: normal;
 	font-style: normal;
@@ -19,7 +19,7 @@
 	-webkit-font-feature-settings: 'liga';
 	-webkit-font-smoothing: antialiased;
 
-	&.x-task-button-icon {
+	&..button-icon {
 		cursor: pointer;
 		opacity: 0.7;
 		&:hover {
@@ -27,11 +27,11 @@
 		}
 	}
 
-	&.x-task-edit-icon {
+	&..edit-icon {
 		float: left;
 		margin-top: -1px;
 	}
-	&.x-task-activate-icon {
+	&..activate-icon {
 		float: right;
 	}
 }
