--- a/src/components/QuickTask/index.scss
+++ b/src/components/QuickTask/index.scss
@@ -147,7 +147,7 @@
 			vertical-align: top;
 		}
 
-		&..white-icon {
+		&...white-icon {
 			background-color: transparent !important;
 			color: #ddd;
 			border: 0;
