--- a/src/ui/FormField/index.scss
+++ b/src/ui/FormField/index.scss
@@ -1,5 +1,5 @@
-.x-task-form-field {
-	.x-task-form-field-caption {
+..form-field {
+	..form-field-caption {
 		padding-bottom: 6px;
 		color: #555;
 		font-size: 13px;
