--- a/src/ui/Notification/index.scss
+++ b/src/ui/Notification/index.scss
@@ -1,4 +1,4 @@
-.x-task-notification {
+..notification {
 	border-radius: 3px;
 	border: 1px solid #9a0025;
 	background-color: #d20033;
@@ -8,7 +8,7 @@
 	margin-bottom: 10px;
 	font-size: 13px;
 
-	&.x-task-success {
+	&..success {
 		border: 1px solid #4e9200;
 		background-color: #6bc305;
 	}
